# FaderDeck

./: LICENSE  README.md
mcu/faderdeck/: faderdeck.ino
pc-app/: CMakeLists.txt  conanfile.py
pc-app/app/: CMakeLists.txt  main_linux.cpp  main_windows.cpp
pc-app/include/: SerialReader.h
pc-app/include/VolumeController/: VolumeController.h  VolumeControllerImpl_Windows.h
pc-app/src/: SerialReader.cpp
pc-app/src/AppHost/: CMakeLists.txt
pc-app/src/AppHost/include/AppHost/: AppHost.h
pc-app/src/AppHost/src/: AppHost.cpp
pc-app/src/AudioDriver/: CMakeLists.txt
pc-app/src/AudioDriver/include/AudioDriver/: AudioDriver.h
pc-app/src/AudioDriver/src/: AudioDriver_Win.cpp  AudioNotificationClients_Win.h
pc-app/src/Config/: CMakeLists.txt
pc-app/src/Config/include/Config/: AppConfig.h  ConfigStore.h
pc-app/src/Config/src/: ConfigStore.cpp  ConfigStore_Win.cpp
pc-app/src/Core/: CMakeLists.txt
pc-app/src/Core/include/Core/: MixerSharedState.h  Platform.h
pc-app/src/Events/: CMakeLists.txt
pc-app/src/SerialListener/: CMakeLists.txt
pc-app/src/SerialListener/include/SerialListener/: SerialListener.h
pc-app/src/SerialListener/src/: SerialListener.cpp
pc-app/src/VolumeController/: VolumeController.cpp  VolumeControllerImpl_Windows.cpp
pc-app/src/WinFun/: CMakeLists.txt  resources.rc
pc-app/src/WinFun/include/: resources.h
pc-app/src/WinFun/include/WinAutoStart/: WinAutoStart.h
pc-app/src/WinFun/include/WinUI/: WinUI.h
pc-app/src/WinFun/src/: WinAutoStart.cpp  WinUI.cpp
pc-app/src/WinUI/: CMakeLists.txt  resources.rc
pc-app/src/WinUI/include/WinUI/: WinUI.h
pc-app/src/WinUI/src/: WinUI.cpp
